# Core

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: main.yml
example/: CMakeLists.txt  d-hello.cpp  d-hello.hpp  game_plugin.cpp
include/: Asset.hpp  Components.hpp  Core.hpp  Export.hpp  Game.hpp  Graphics.hpp  IGame.hpp  Imgui.hpp  Inputs.hpp  Physics.hpp  Rect.hpp  Renderer.hpp  Scene.hpp  Tileset.hpp  Var.hpp  Vec.hpp  Video.hpp
sources/: Asset.cpp  Asset.hpp  Device.cpp  Device.hpp  Editor.cpp  Editor.hpp  Game.cpp  Game.hpp  Imgui.cpp  Imgui.hpp  Include.hpp  Inputs.cpp  Inputs.hpp  Library.cpp  Library.hpp  Physics.cpp  Physics.hpp  Plugin.cpp  Plugin.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Tileset.cpp  Tileset.hpp  main.cpp
